# svmwrap

./: .gitignore  LICENSE  README.md  dune-project  svmwrap  svmwrap.opam  test.sh
data/: CHEMBL2842_std.AP.xz  CHEMBL2842_std.dix.xz  CHEMBL2842_std.smi
src/: dune  gnuplot.ml  perf.ml  svmwrap.ml  utls.ml
