opam-version: "2.0"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
homepage: "https://github.com/UnixJunkie/svmwrap"
bug-reports: "https://github.com/UnixJunkie/svmwrap/issues"
dev-repo: "git+https://github.com/UnixJunkie/svmwrap.git"
license: "BSD-3-Clause"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "base-unix"
  "batteries"
  "conf-libsvm-tools"
  "cpm" {>= "11.0.0"}
  "dolog" {>= "6.0.0"}
  "dune" {>= "2.9"}
  "minicli" {>= "5.0.0"}
  "molenc" {>= "16.0.0"}
  "parany" {>= "11.0.0"}
  "line_oriented" {>= "1.2.0"}
  "nlopt"
  "dokeysto_camltc"
]
# the software can compile and install without the depopts.
# however, some tools and options will not work anymore at run-time
depopts: [
  "conf-gnuplot"
]
synopsis: "Wrapper on top of libsvm-tools"
description: """
Svmwrap can be used to train/test regressors using libsvm-tools.

usage: COMING SOON
"""
# url {
#   src: "https://github.com/UnixJunkie/svmwrap/archive/XXX.tar.gz"
#   checksum: "md5=YYY"
# }
